# cpputil

./: .gitignore  CMakeLists.txt  mylib.cc
googletest-test/: CMakeLists.txt  main.cc
include/: cpputil.h
include/cpputil/: container.h  geometry.h  linalg.h  logger.h  meta.h  string_util.h  time.h  vector.h
src/: container.tcc  geometry.cc  string_util.cc  vector.tcc
test/: CMakeLists.txt  container.test.cc  geometry.test.cc  json.test.cc  logger.test.cc  meta.test.cc  string.test.cc  vector.test.cc
unittests/: CMakeLists.txt  test_mylib.cc
